# tables

./: .gitattributes  .gitignore  Cargo.toml  README.md
agents/: README.md
agents/prompts/: README.md
agents/skills/: README.md
archive/scripts/: compute_fixed_bits.py  find_forced_bits_no_sat.py  propagate_hidden_unary.py  reduce_projection_intersections_fixed_point.py  reduce_system_fixed_point.py  reduce_with_forced_bits_fixed_point.py
benchmarks/: README.md
configs/: README.md
configs/experiments/: README.md
configs/pipeline/: README.md
data/derived/: bits.common_fixed_point.components.json  (+18 more)
docs/: AGENT_ONBOARDING.md  BINARY_FORMAT.md  DATA_MODEL.md  GENERATION_CHAIN.md  OPERATIONS.md  PERF_WORKFLOW.md  PIPELINE.md  PROJECT_STRUCTURE.md  SUBTABLE_ROUNDTRIP.md
docs/adr/: README.md
examples/: central_bit_derived_main_cycles.rs  check_single_central_bit_cluster.rs  eliminate_central_bits_by_cluster_consistency.rs  find_bits_mergeable_with_all_incident_tables.rs  forced_bits_fast.rs  merge_all_tables.rs  pairwise_merge_generate.rs
research/: README.md
runs/: README.md
src/: __init__.py  bit_zero_collapse.rs  bounded_neighborhood_join_filter.rs  common.rs  forced_bits.rs  lib.rs  local_exact_elimination_filter.rs  main.rs  node_filter.rs  pair_reduction.rs  pairwise_merge.rs  rank_stats.rs  single_table_bit_filter.rs  subset_absorption.rs  subtable_roundtrip.rs  table_bipartite_graph.rs  table_decomposition.rs  table_merge_fast.rs  tables_file.rs  tautology_filter.rs  triangle_consistency_filter.rs  zero_collapse_bit_filter.rs
tests/: README.md
(+59 files in other folders)
