[package]
name = "tables"
version = "0.1.0"
edition = "2021"
default-run = "tables"

[[bin]]
name = "tables-pairwise-merge"
path = "src/bin/pairwise_merge.rs"

[[bin]]
name = "tables-pair-reduction"
path = "src/bin/pair_reduction.rs"

[[bin]]
name = "tables-subset-absorption"
path = "src/bin/subset_absorption.rs"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
